<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--These are the items that will be displayed in bottom nav-->
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Home" />
    <item
        android:id="@+id/timeline"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="Earthquake List" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="Settings" />

</menu>